# voyant

./: .dockerignore  .env.example  .gitignore  AGENT_CONTINUITY.md  ANALYSIS.md  ARCHITECTURAL_PROPOSAL.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  PHASE1_COMPLETION_REPORT.md  README.md  REAL_DATA_TEST_PLAN.md  ROADMAP_CANONICAL.md  RULES.md  STATUS.md  VIBE_CODING_RULES.MD  VIBE_CODING_RULES_VIOLATIONS.md  VIOLATIONS.md  conftest.py  debug_imports.py  docker-compose.yml  fix_uuid_conflict.py  fix_uuid_properly.py  manage.py  menu.js  pyproject.toml  pyright_errors.txt  pytest.ini  requirements.txt  ruff.toml  srs-somagenthub.md  sufficiency.json  violations.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/analysis/: __init__.py  api.py  apps.py  models.py
apps/billing/: __init__.py  lago.py
apps/core/: __init__.py  api.py  api_utils.py  apps.py  config.py  middleware.py  models.py  views.py
apps/discovery/: __init__.py  api.py  apps.py  models.py  source_detection.py
apps/generators/: __init__.py  schema_vis.py
apps/governance/: __init__.py  api.py  apps.py  models.py
apps/ingestion/: __init__.py  api.py  apps.py  models.py
apps/integrations/: __init__.py  soma.py
apps/mcp/: server.py  tools.py  tools_catalog.py  tools_core.py  tools_scrape.py
apps/scraper/: __init__.py  activities.py  api.py  apps.py  deep_research_workflow.py  models.py  search_activities.py  security.py  workflow.py
apps/search/: __init__.py  api.py  apps.py
apps/services/: __init__.py
apps/sql/: __init__.py  api.py  apps.py
apps/streaming/: __init__.py  activities.py  flink_client.py  workflow.py
apps/uptp_core/: apps.py  engine.py  parser.py  schemas.py
apps/worker/: __init__.py  __main__.py  worker_main.py
apps/workflows/: api.py  models.py
config/keycloak/: realm-voyant.json
config/trino/: config.properties  jvm.config  node.properties
dashboard/: Dockerfile  README.md  index.html  package.json  tailwind.config.js  tailwind.config.ts  vite.config.js  vite.config.ts
dashboard/src/: App.jsx  index.css  main.ts
docker/r-engine/: Dockerfile
docker/sandbox/: Dockerfile.python
docs/: ARCHITECTURE.md  CANONICAL_ARCHITECTURE.md  CANONICAL_ROADMAP.md  COMPLIANCE.md  DEPLOYMENT.md  DJANGO_VIOLATIONS.md  EVENTS.md  HELM_VALUES.md  KUBERNETES.md  MCP_INTERFACE.md  MCP_ONBOARDING_AGENTS.md  OBSERVABILITY.md  OPERATIONS.md  OTEL_COLLECTOR_SAMPLE.yaml  PLUGIN_REGISTRY.md  PRINCIPLES.md  README.md  ROADMAP.md  SCALING.md  SECURITY.md  SPRINT_ANALYSIS_GUARDRAILS.md  SRS.md  SRS_SCRAPER.md  TASKS.md  TESTING_STRATEGY.md  VOYANT_MASTER_DOCUMENTATION.md  openapi.json
docs/adr/: 0001-plugin-based-analytics.md  0002-scikit-learn-adoption.md
docs/api/: README.md
docs/architecture/: DESIGN.md  PROJECT_STRUCTURE.md  README.md  scraper_architecture.md  voyant_system_architecture.md
docs/compliance/: CODE_SWEEP_2026-02-27.md  COMPLIANCE.md  COMPLIANCE_SUMMARY.md  DEPLOYMENT_CLUSTER_CHECK_2026-02-27.md  DOCS_TRUTH_AUDIT_2026-02-27.md  README.md
docs/development/: README.md
docs/management/: AGENT_CONTINUITY.md  PHASE1_COMPLETION_REPORT.md  README.md  TASKS.md
docs/operations/: README.md  grafana_dashboard_example.json
docs/specifications/: README.md  SRS.md  SRS_SCRAPER.md  voyant_master_specification.md
docs/srs/: Voyant_SRS.md
examples/: ingest_and_analyze.py
examples/data/: sample_customers.csv
helm/voyant-udb/: values.yaml
infra/: README.md
infra/integrated/: .env.integrated  README.md  docker-compose.yml
infra/standalone/: .dockerignore  .env.example  .env.production.example  Dockerfile  README.md  Tiltfile  docker-compose.frontend.yml  docker-compose.prod.yml  docker-compose.yml
k8s/: duckdb-artifacts-pvc.yaml  network-baseline.yaml
kestra_flows/: ingest_and_analyze.yml
scripts/: README.md  debug_imports.py  deploy_spicedb_schema.py  dev.sh  example_compras_publicas.py  example_mcp_deep_archive.py  example_search_ai.py  init-db.sql  patiotuerca_crawl.py  verify_benchmark.py  verify_circuit_breakers.py  verify_cleaning.py  verify_discovery.py  verify_ml.py  verify_observability.py  verify_operational.py  verify_vault.py  wait-for-stack.sh
scripts/examples/: example_compras_publicas.py  example_mcp_deep_archive.py  example_search_ai.py
scripts/ops/: debug_imports.py  deploy_spicedb_schema.py
scripts/verification/: verify_benchmark.py  verify_cleaning.py  verify_discovery.py  verify_ml.py  verify_observability.py  verify_operational.py  verify_vault.py
tests/: conftest.py  run_integration_tests.sh  test_airbyte_health.py  test_analytics.py  test_analyze_artifacts.py  test_analyze_failure.py  test_api_version.py  test_artifact_taxonomy.py  test_autodetect_stub.py  test_bundle_partial_failure.py  test_chart_heuristics.py  test_ckan_search.py  test_config_flags.py  test_config_reload.py  test_contracts.py  test_dashboard_and_charts.py  test_e2e_smoke.py  test_events_recent_and_metrics.py  test_fix_data_quality.py  test_health.py  test_health_endpoints.py  test_job_queue.py  test_kafka_events.py  test_kpi_engine.py  test_kpi_templates.py  test_mcp_agent_e2e.py  test_mcp_scraper.py  test_metrics.py  test_metrics_mode.py  test_metrics_select_core.py  test_plugin_registry.py  test_prune_endpoint.py  test_prune_metrics.py  test_quotas.py  test_r_bridge.py  test_rate_limit.py  test_rbac.py  test_sql_guard.py  test_stats.py  test_sufficiency.py
tests/activities/: test_analysis_activities.py  test_generation_activities.py
udb_api/: __init__.py  airbyte_client.py  analyze.py  app.py  autodetect.py  charts.py  config.py  events.py  ingest.py  job_store.py  kestra_client.py  kpi.py  logging_mw.py  logging_setup.py  masking.py  metrics.py  narrative.py  rbac.py  secret_store.py  security.py  startup_checks.py  sufficiency.py
voyant/: __init__.py
voyant_app/: __init__.py  api.py  apps.py  mcp.py  mcp_tools.py  models.py
voyant_project/: __init__.py  asgi.py  security_settings.py  settings.py  urls.py  wsgi.py
voyant_udb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+383 files in other folders)
