[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voyant"
version = "3.0.0"
description = "Autonomous Data Intelligence for AI Agents"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "SomaTech", email = "dev@somatech.io" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "Django>=5.0.0",
    "django-ninja>=1.1.0",
    "django-cors-headers>=4.3.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psycopg[binary]>=3.1.18",
    "redis>=5.0.0",
    "httpx>=0.25.0",
    "trino>=0.327.0",
    "minio>=7.2.0",
    "pyRserve>=1.0.0",
    "temporalio>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]
processing = [
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "ydata-profiling>=4.6.0",
    "great-expectations>=0.18.0",
]

[project.scripts]
voyant-mcp = "voyant.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["voyant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=voyant --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
