[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voyant"
version = "3.0.0"
description = "Autonomous Data Intelligence for AI Agents"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "SomaTech", email = "dev@somatech.io" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # Django / API
    "Django>=5.0.0",
    "django-ninja>=1.1.0",
    "django-mcp>=0.3.1",
    "django-cors-headers>=4.3.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Database
    "psycopg[binary]>=3.1.18",
    # Cache
    "redis>=5.0.0",
    # HTTP
    "httpx>=0.25.0",
    "requests>=2.31.0",
    # SQL Federation
    "trino>=0.327.0",
    # Object Storage
    "minio>=7.2.0",
    # Messaging
    "confluent-kafka>=2.3.0",
    # Workflow Engine
    "temporalio>=1.4.0",
    # Secrets / Auth
    "hvac>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Data Processing
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "duckdb>=0.10.0",
    "lxml>=5.0.0",
    "cssselect>=1.2.0",
    "pyyaml>=6.0.0",
    # DataScraper
    "playwright>=1.40.0",
    "scrapy>=2.11.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "pytesseract>=0.3.10",
    "fake-useragent>=1.4.0",
    "Pillow>=10.0.0",
    # NLP
    "nltk>=3.8.0",
    # Profiling & Quality
    "ydata-profiling>=4.6.0",
    "great-expectations>=0.18.0",
    # Observability
    "prometheus-client>=0.19.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    # Math / R bridge
    "pyRserve>=1.0.0",
    # Authorization
    "authzed>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-django>=4.7.0",
    "pytest-env>=1.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pyright>=1.1.350",
    "mypy>=1.7.0",
    "django-types>=0.19.0",
]

[project.scripts]
voyant-mcp = "apps.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["apps", "voyant_project"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "voyant_project.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=apps --cov-report=term-missing --ds=voyant_project.settings"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
# Set environment variables for tests
env = [
    "VOYANT_ENV=local",
    "DATABASE_URL=postgresql://voyant:voyant@localhost:45432/voyant_test",
    "REDIS_URL=redis://:voyant@localhost:45379/1",
    "VOYANT_SECRET_KEY=test-secret-key-for-testing-only-min-50-chars-long-django-security",
    "VOYANT_DEBUG=false",
    "VOYANT_SECURITY_ENABLED=false",
    'VOYANT_ALLOWED_HOSTS=["*","localhost","127.0.0.1","testserver"]',
    "VOYANT_SECRETS_BACKEND=env",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
